// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conjugation can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Conjugation",
          "declaredName": "c1",
          "elements": [],
          "sourceRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "elements": [],
                      "target": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Conjugation",
          "declaredName": "c2",
          "elements": [
            {
              "$type": "Annotation",
              "elements": [],
              "source": {
                "$type": "Documentation",
                "about": [],
                "body": "/* same as c1 */",
              },
            },
          ],
          "sourceRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate2",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "elements": [],
                      "target": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`conjugation may be omitted without identifiers with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Conjugation",
          "elements": [],
          "sourceRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "elements": [],
                      "target": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`conjugation may be omitted without identifiers with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [
            {
              "$type": "FeatureMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "Input",
                "direction": "in",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
          ],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate2",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Conjugation",
          "elements": [],
          "sourceRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [],
                  "declaredName": "Conjugate1",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "targetRef": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "children": [
                    {
                      "$type": "FeatureMembership",
                      "elements": [],
                      "target": {
                        "$type": "Feature",
                        "children": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                  ],
                  "declaredName": "Original",
                  "heritage": [],
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`type can declare owned conjugations with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [
            {
              "$type": "Conjugation",
              "elements": [],
              "targetRef": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "Original",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`type can declare owned conjugations with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Original",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Class",
          "children": [],
          "declaredName": "Conjugate1",
          "heritage": [
            {
              "$type": "Conjugation",
              "elements": [],
              "targetRef": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "children": [],
                      "declaredName": "Original",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
